--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,19 @@
 
 body {
   margin: 0;
-  min-height: 100vh;
+  
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#root { 
+  /* background: radial-gradient(circle, rgba(255,0,118,1) 0%, rgba(218,0,255,1) 100%); */
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 code {
