--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
 }
 
 #root { 
-  /* background: radial-gradient(circle, rgba(255,0,118,1) 0%, rgba(218,0,255,1) 100%); */
+  background: radial-gradient(circle, rgba(255,0,118,1) 0%, rgba(218,0,255,1) 100%);
   display: flex;
   flex-direction: column;
   min-height: 100vh;
