--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,6 +1,6 @@
-.header_container{
-    background: radial-gradient(circle, rgba(255,0,118,1) 0%, rgba(218,0,255,1) 100%);
-}
+/* .header_container{
+    background: radial-gradient(circle, rgba(255,0,118,1) 0%, rgba(218,0,255,1) 100%); 
+} */
 
 .favorites-icon{
     color: red;
