--- a/src/components/description/style.css
+++ b/src/components/description/style.css
@@ -1,5 +1,5 @@
 .description_container{
-    height: 20vh;
+    /* height: 20vh; */
     margin-top: auto;
     /* background: radial-gradient(circle, rgba(255,0,118,1) 0%, rgba(218,0,255,1) 100%); */
     font-size: 1rem;
